versions/v2.9/modules/en/pages/cluster-deployment/infra-providers/nutanix/nutanix.adoc
= Creating a Nutanix AOS Cluster
:page-languages: [en, zh]
:revdate: 2025-03-17
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/nutanix/nutanix 
:product-path: cluster-deployment/infra-providers/nutanix/nutanix
:description: Use Rancher to create a Nutanix AOS (AHV) cluster. It may consist of groups of VMs with distinct properties which allow for fine-grained control over the sizing of nodes.

https://www.nutanix.com/products/acropolis[Nutanix Acropolis Operating System] (Nutanix AOS) is an operating system for the Nutanix hyper-converged infrastructure platform. AOS comes with a built-in hypervisor called https://www.nutanix.com/products/ahv[Acropolis Hypervisor], or AHV. By using Rancher with Nutanix AOS (AHV), you can bring cloud operations on-premises.

Rancher can provision nodes in AOS (AHV) and install Kubernetes on them. When creating a Kubernetes cluster in AOS, Rancher first provisions the specified number of virtual machines by communicating with the Prism Central API. Then it installs Kubernetes on top of the VMs.

A Nutanix cluster may consist of multiple groups of VMs with distinct properties, such as the amount of memory or the number of vCPUs. This grouping allows for fine-grained control over the sizing of nodes for each Kubernetes role.

* xref:cluster-deployment/infra-providers/nutanix/provision-kubernetes-clusters-in-aos.adoc#_creating_a_nutanix_aos_cluster[Creating a Nutanix Cluster]
* xref:cluster-deployment/infra-providers/nutanix/provision-kubernetes-clusters-in-aos.adoc[Provisioning Storage]

== Creating a Nutanix Cluster

In xref:cluster-deployment/infra-providers/nutanix/provision-kubernetes-clusters-in-aos.adoc[this section,] you'll learn how to use Rancher to install an https://rancher.com/docs/rke/latest/en/[RKE] Kubernetes cluster in Nutanix AOS.
